Fri Apr 28 21:30:46 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/msvc_auto_compile.pl:

          Fixed the build core logic to work correctly when more than
          one configuration is specified.

        * bin/vc_filter.pl:

          Now ignores the LINK4089 warnings.  We haven't quite figured
          out how to fix them yet.

Fri Apr 28 21:11:32 2000  Darrell Brunsch  <brunsch@uci.edu>

        * bin/clean_dsp.pl: (added)

          This script should clean out excess baggage from DSP files.

Fri Apr 28 13:11:20 2000  Ossama Othman  <ossama@uci.edu>

	* include/makeinclude/platform_linux_lxpthread.GNU:
	* include/makeinclude/platform_linux_lxpthreads.GNU:

	  Renamed `platform_linux_lxpthread.GNU' to
 	  platform_linux_lxpthreads.GNU to be consistent with the name of
 	  its corresponding config header `config-linux-lxpthreads.h'.
  	  Thanks to Ken Weinert <kenw@ihs.com> for reporting this.

	  `platform_linux_lxpthread.GNU' now includes the newly renamed
	  file for backward compatibility.

Fri Apr 28 11:54:21 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/SString.cpp: Fixed the delimiter_replace() method so that
	  it actually does what it's comment implies...  Thanks to Martin
 	  Krumpolec <krumpo@pobox.sk> for reporting this.

Thu Apr 27 18:19:19 2000  James Hu  <jxh@entera.com>

        * ace/Dirent.i: Added checks to see if dirp_ is initialized
          before calling into ACE_OS.

Thu Apr 27 16:53:49 2000  Irfan Pyarali  <irfan@cs.wustl.edu>

	* ace/Hash_Map_Manager_T.cpp (unbind_all_i): Added new method
	  unbind_all() for removing all the entries in one shot.  Thanks
	  to Boris Sukholitko <boris@WebGlide.com> for providing this
	  enhancement.

	* tests/Hash_Map_Manager_Test.cpp: Added test for unbind_all().

Thu Apr 27 14:17:52 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS.i:

          isatty (): Messed up on my CE change, so the version that