@@ -31,10 +31,12 @@ PMS_All::encode (char *packet, int &packet_length)
   for (;
        (prp = this->get_next_friend ()) != 0;
        *buf_ptr++ = '\t')
-    buf_ptr = this->handle_protocol_entries (ACE_OS::strecpy (ACE::strecpy (buf_ptr,
-                                                                            prp->get_login ()),
-                                                              prp->get_real ()),
-                                             prp->get_drwho_list ());
+    buf_ptr = 
+      this->handle_protocol_entries (ACE_OS::strecpy 
+                                       (ACE_OS::strecpy (buf_ptr,
+                                                         prp->get_login ()),
+                                        prp->get_real ()),
+                                     prp->get_drwho_list ());
 
   *buf_ptr++ = '\n';
   packet_length = buf_ptr - packet;
